Fixing Nav Issue on iPhone
...Another Test

--- a/src/sass/components/nav.scss
+++ b/src/sass/components/nav.scss
@@ -91,7 +91,6 @@
 //////////////////
 */
 .social-container {
-  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
